--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     
-<head><link rel="stylesheet" href="/style.css"> <meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
+<head><link rel="stylesheet" href="style.css"> <meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
 <title> Spud's Puds</title>
 <header>
     <img src="headerbanner.png" alt="Spud's Puds" width = "1077" height="311"> 
